crates/murphy-plugin-macros/tests/ui/fail_cop_wrong_signature_wrong_node_type.stderr
error: #[on_node]: second parameter type must be `NodeId`
  --> tests/ui/fail_cop_wrong_signature_wrong_node_type.rs:11:33
   |
11 |     fn check_send(&self, _node: u32, _cx: &Cx<'_>) {}
   |                                 ^^^

warning: unused import: `murphy_plugin_api::Cx`
 --> tests/ui/fail_cop_wrong_signature_wrong_node_type.rs:1:5
  |
1 | use murphy_plugin_api::Cx;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
